# aoc

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
advent_of_code/: Cargo.toml  README.md
advent_of_code/src/: template.txt
advent_of_code/src/template/: timings.rs
aoc2015/: Cargo.toml  README.md
aoc2015/.cargo/: config.toml
aoc2015/data/examples/: 12.txt
aoc2023/: Cargo.toml  README.md
aoc2024/: Cargo.toml  README.md
aoc2024/.cargo/: config.toml
aoc2025/: Cargo.toml  README.md
aoc2025/.cargo/: config.toml
aoc2025/src/: lib.rs
aoc_utils/: Cargo.toml
aoc_utils/src/: lib.rs
template/: Cargo.toml  README.md
template/.cargo/: config.toml
