[package]
name = "aoc2015"
version = "0.11.0"
authors = ["Hans Baker"]
edition = "2021"
default-run = "aoc2015"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
advent_of_code = { path = "../advent_of_code" }
aoc_utils = { path = "../aoc_utils" }
# Template dependencies
chrono = { version = "0.4", optional = true }
dhat = { version = "0.3", optional = true }
itertools = "0.13"
memoize = "0.4"
pico-args = "0.5"
regex = "1.11"
tinyjson = "2.5"
tinyvec = "1.8"
md5 = "0.8"

# Solution dependencies
