[package]
name = "aoc2024"
version = "0.11.0"
authors = ["Hans Baker"]
edition = "2021"
default-run = "aoc2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
advent_of_code = { path = "../advent_of_code" }
# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
itertools = "0.13.0"
pico-args = "0.5.0"
regex = "1.11.1"
tinyjson = "2.5.1"
tinyvec = "1.8.0"

# Solution dependencies
